--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
       <li>하이</li>
       <li>으악</li>
       <li>최소화</li>
-      <li>원격저장소</li>
+      <li>충돌최소화</li>
+      <li>충돌하지마</li>
     </ul>
     </header>
   </body>
