--- a/index.html
+++ b/index.html
@@ -11,11 +11,8 @@
       <li>으악</li>
       <li>최소화</li>
       <li>충돌최소화</li>
-<<<<<<< HEAD
-      <li>충돌하지마</li>
-=======
       <li>충돌최소화</li>
->>>>>>> 충돌최소화
+      <li>충돌 재실험중</li>
     </ul>
     </header>
   </body>
